<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="status_label">Status : </string>
    <string name="species_label">Species : </string>
    <string name="type_label">Type : </string>
    <string name="gender_label">Gender : </string>
    <string name="origin_label">Origin : </string>
    <string name="location_label">Location : </string>
    <string name="episode_label">Episode : </string>
    <string name="url_label">Url : </string>
    <string name="created_label">Created : </string>
</resources>