<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".features.characters.detail.ui.CharacterDetailActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center"
        android:textColor="@color/black"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.recipes.navigation.RecipeDetailFragment">

            <ImageView
                android:id="@+id/ivCharacter"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_background" />


            <TextView
                android:id="@+id/tvStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/status_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCharacter" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvStatusLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvStatusLabel"
                app:layout_constraintTop_toTopOf="@+id/tvStatusLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvSpeciesLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/species_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStatusLabel" />

            <TextView
                android:id="@+id/tvSpecies"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvSpeciesLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvSpeciesLabel"
                app:layout_constraintTop_toTopOf="@+id/tvSpeciesLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/type_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSpeciesLabel" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTypeLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvTypeLabel"
                app:layout_constraintTop_toTopOf="@+id/tvTypeLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvGenderLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/gender_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTypeLabel" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvGenderLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvGenderLabel"
                app:layout_constraintTop_toTopOf="@+id/tvGenderLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvOriginLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/origin_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGenderLabel" />

            <TextView
                android:id="@+id/tvOrigin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvOriginLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvOriginLabel"
                app:layout_constraintTop_toTopOf="@+id/tvOriginLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/location_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOriginLabel" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLocationLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvLocationLabel"
                app:layout_constraintTop_toTopOf="@+id/tvLocationLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvEpisodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/episode_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLocationLabel" />

            <TextView
                android:id="@+id/tvEpisode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvEpisodeLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvEpisodeLabel"
                app:layout_constraintTop_toTopOf="@+id/tvEpisodeLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvUrlLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/url_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEpisodeLabel" />

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvUrlLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvUrlLabel"
                app:layout_constraintTop_toTopOf="@+id/tvUrlLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvCreatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/created_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUrlLabel" />

            <TextView
                android:id="@+id/tvCreated"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCreatedLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvCreatedLabel"
                app:layout_constraintTop_toTopOf="@+id/tvCreatedLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/app_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>